<resources>
    <string name="app_name">GymNote</string>
    <string name="title_notes">Notes</string>
    <string name="title_addNote">Add Note</string>
    <string name="title_logout">Logout</string>
    <string name="button_addNote">Add Note</string>
    <string name="hint_noteTitle">Note title here</string>
    <string name="hint_noteDate">Note date here</string>
    <string name="hint_noteDetails">Note details here</string>
    <string name="addNoteDate">Add Note Date</string>
    <string name="hint_noteText">Please enter your note details here</string>
    <string name="pick_date">Please pick the note date</string>
    <string name="complete">Complete?</string>
    <string name="delete">Delete</string>
    <string name="content_description_password">User Password</string>
    <string name="content_description_user">User Email</string>
    <string name="showCompleteOnly">Show Complete Notes</string>
    <string name="typeSelect">Select Exercise Type</string>
    <string name="notRegisteredSignUpHere">Not registered, sign up here</string>
    <string name="registerNow">Register Now</string>

</resources>