<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_notes">

    <fragment
        android:id="@+id/navigation_notes"
        android:name="ie.wit.gymnote.ui.notes.NotesFragment"
        android:label="@string/title_notes"
        tools:layout="@layout/fragment_notes" >
        <action
            android:id="@+id/action_navigation_notes_to_navigation_addnote"
            app:destination="@id/navigation_addnote" />
        <action
            android:id="@+id/action_navigation_notes_to_navigation_logout"
            app:destination="@id/navigation_logout" />
    </fragment>

    <fragment
        android:id="@+id/navigation_addnote"
        android:name="ie.wit.gymnote.ui.addNote.AddNoteFragment"
        android:label="@string/title_addNote"
        tools:layout="@layout/fragment_addnote" >
        <action
            android:id="@+id/action_navigation_addnote_to_navigation_notes"
            app:destination="@id/navigation_notes" />
        <action
            android:id="@+id/action_navigation_addnote_to_navigation_logout"
            app:destination="@id/navigation_logout" />
    </fragment>

    <fragment
        android:id="@+id/navigation_logout"
        android:name="ie.wit.gymnote.ui.logout.LogoutFragment"
        android:label="@string/title_logout"
        tools:layout="@layout/fragment_logout" />
</navigation>