<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addNote.AddNoteFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/noteTitleLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:endIconMode="clear_text"
                    android:background="@drawable/rounded_edittext"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/noteTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:autofillHints="hint"
                    android:hint="@string/hint_noteTitle"
                    android:inputType="text"
                    android:maxLength="250"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    />
                </com.google.android.material.textfield.TextInputLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/noteDateLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:endIconMode="clear_text"
                        android:background="@drawable/rounded_edittext"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <EditText
                        android:id="@+id/noteDate"
                        android:layout_width="220dp"
                        android:layout_height="45dp"
                        android:layout_margin="8dp"
                        android:hint="@string/hint_noteDate"
                        android:inputType="date"
                        android:textSize="14sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btnDatePicker"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:text="@string/addNoteDate"
                        android:textAllCaps="false"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/noteDate" />
            </LinearLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/noteDetailsLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:endIconMode="clear_text"
                    android:background="@drawable/rounded_edittext"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/noteDetails"
                    android:layout_width="match_parent"
                    android:layout_height="247dp"
                    android:layout_margin="8dp"
                    android:autofillHints="hint"
                    android:background="@drawable/shape"
                    android:gravity="start"
                    android:hint="@string/hint_noteText"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:maxLength="250"
                    android:maxLines="10"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/colorAccent"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_addNote"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>